solvaTask/src/main/kotlin/com/example/solvatask/error/dto/ErrorResponse.kt
package com.example.solvatask.error.dto

data class ErrorResponse(val error: String?)
